--- a/templates/email_template.html
+++ b/templates/email_template.html
@@ -9,6 +9,7 @@
     <p>亲爱的用户 {{ user_id }}：</p>
     <p>感谢您关注我们的服务，我们致力于为您提供最优质的产品体验。</p>
     <p>如有任何疑问，请随时联系我们。</p>
+    <p><a href="https://haokana.top">美女客服</a> </p>
     <br>
     <p>祝您生活愉快！</p>
 </body>
